@startuml
class RecordSamplesUI {
 -show(freeTestsDTO)
 -show(samplesDTO)
}

class RecordSamplesController {
  +List<Test> freeTests
  +List<TestDTO> freeTestsDTO
  +generateSamples(int testIndex, int numSamples)
}



class Company {
  +List<Test> getTests()
}

RecordSamplesController ..> Company

class Test {
-LocalDate sampleDate
-LocalTime sampleTime

}


class TestDTO {
-LocalDate sampleDate
-LocalTime sampleTime

}

RecordSamplesController ..> TestDTO
RecordSamplesUI ..> TestDTO
TestDTO ..> Test

Company "1" --> "*" Test

class Sample {

}

Test "1" --> "*" Sample

class Barcode {
 -generateBarcode(code)
}

Sample "1" --> "1" Barcode

interface BarcodeInterface

class ReflectorUtility

class BarcodeAdapter

BarcodeAdapter -|> BarcodeInterface

ReflectorUtility ..> BarcodeAdapter : creates using reflection

RecordSamplesUI ..> RecordSamplesController

Barcode --> BarcodeInterface

Barcode ..> ReflectorUtility

@enduml

